--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -92,6 +92,8 @@
         <div class="theVenue-content">
             {{{content.venue_content.html}}}
         </div>
+        
+        {{{cl "image" "jm-wedding/venue-front.jpg" class="theVenue-image"}}}
     
         <p class="theVenue-address">{{{insertBreaks content.venue_address.md}}}</p>
         <p class="theVenue-directions"><a href="https://www.google.com/maps/dir//Drumore+Estate,+331+Red+Hill+Rd,+Pequea,+PA+17565/@39.8964421,-76.2938167,17z/data=!4m15!1m6!3m5!1s0x89c62de0ff3d792f:0x2ee3fd0f0035089f!2sDrumore+Estate!8m2!3d39.896438!4d-76.291628!4m7!1m0!1m5!1m1!1s0x89c62de0ff3d792f:0x2ee3fd0f0035089f!2m2!1d-76.291628!2d39.896438">Get Directions</a></p>
