--- a/src/style/modules/venue.scss
+++ b/src/style/modules/venue.scss
@@ -28,6 +28,12 @@
     &-leadIn { color: $primary; }
     &-title { color: $white; }
     
+    &-image {
+        display: block;
+        margin: 3em auto;
+        max-width: 100%;
+    }
+    
     &-address,
     &-directions {
         font-size: $size-xsmall;
