--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -1,6 +1,7 @@
 @import "base/reset";
 @import "base/variables";
 @import "base/mixins";
+@import "base/animations";
 @import "base/layout";
 @import "base/typography";
 
@@ -15,3 +16,4 @@
 @import "modules/main-nav";
 @import "modules/party";
 @import "modules/venue";
+@import "modules/rsvp";
